# lagu-sion-ios

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  Gemfile  Makefile  README.md  WORKSPACE
.github/workflows/: bazel-ci  bazel-ci.yml  build.yml  fastlane-ci.yml  master.yml
Common/: BUILD.bazel  SearchField.swift
Favorites/: BUILD.bazel  FavoritesView.swift
FavoritesTests/: BUILD.bazel
LaguSion/: BUILD  BUILD.bazel  Constants.swift  Core.swift  Info-Bazel.plist  RootView.swift  SceneDelegate.swift
LaguSion.xcodeproj/: project.pbxproj
LaguSion.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
LaguSion.xcodeproj/xcshareddata/xcschemes/: LaguSion.xcscheme  LaguSionUITests.xcscheme
LaguSion/Common/: BUILD.bazel  Common.h  ContentSizeSelection.swift  FontSelection.swift  Unwrap.swift
LaguSion/DataSource/: BUILD.bazel  Datasource.h  LaguSionDataSource.swift  LaguSionError.swift  Song.swift  SongBook.swift  Verse.swift
LaguSion/DataSource/Domain/: BookSelection.swift  Song.swift  SongBook.swift  SortOptions.swift  Verse.swift
LaguSion/DataSourceTests/: BUILD.bazel  DatasourceTests.swift
LaguSion/Favorites/: BUILD.bazel  Favorites.h  FavoritesView.swift  Logic.swift  Views.swift
LaguSion/FavoritesTests/: BUILD.bazel  FavoritesTests.swift
LaguSion/LaguSion/: AppDelegate.swift  BUILD.bazel  Bazel-Info.plist  Constants.swift  Core.swift  Info.plist  Logic.swift  RootView.swift  SceneDelegate.swift  Views.swift
LaguSion/LaguSion.xcodeproj/: project.pbxproj
LaguSion/LaguSion.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
LaguSion/LaguSion.xcodeproj/xcshareddata/xcschemes/: LaguSion.xcscheme  SnapshotUITests.xcscheme
LaguSion/LaguSion/LaguSion.xcdatamodeld/: .xccurrentversion
LaguSion/LaguSion/LaguSion.xcdatamodeld/LaguSion.xcdatamodel/: contents
LaguSion/LaguSion/Services/gRPC/: GRPCServiceManager.swift  echo_service.proto
LaguSion/LaguSion/Services/gRPC/EchoService/: echo_service.pb.swift
LaguSion/LaguSion/Tools/: Publisher+Extension.swift
LaguSion/LaguSion/UI/: RootView.swift
LaguSion/LaguSion/UI/MainView/: MainView.swift
LaguSion/LaguSionTests/: BUILD.bazel  LaguSionTests.swift
LaguSion/Main/: BUILD.bazel  Logic.swift  Views.swift
LaguSion/MainTests/: AppearTest.swift  BUILD.bazel  ErrorAlertTest.swift  GetSongsTest.swift  SearchFieldTest.swift  SongBookSelectionTest.swift  SongTriggerTest.swift  SortOptionSelectionTest.swift
LaguSion/Networking/: BUILD.bazel  LaguSionClient.swift  LaguSionGRPCClient.swift  Networking.h
LaguSion/Networking/gRPC/protobuf/: lagu_sion.proto
LaguSion/Settings/: BUILD.bazel  Logic.swift  Settings.h  Views.swift
LaguSion/SettingsTests/: BUILD.bazel  SettingsTests.swift
LaguSion/SnapshotUITests/: SnapshotUITests.swift
LaguSion/Song/: BUILD.bazel  Logic.swift  SongView.swift  Views.swift
LaguSion/SongTests/: BUILD.bazel  SongTests.swift
LaguSion/Tools/: String+Extension.swift  Unwrap.swift
LaguSion/UI/: RootView.swift
LaguSion/UI/MainView/: MainView.swift
LaguSion/UI/TestCombineGRPCView/: TestCombineGRPCView.swift
LaguSion/Views/: FavoritesView.swift  MainView.swift  RootView.swift  SongView.swift
LaguSion/modulemaps/: CNIOBoringSSL.modulemap
LaguSionKit/: BUILD.bazel  DismissingKeyboardOnSwipe.swift  LaguSionKit.h  Publisher+Extension.swift  SearchField.swift  String+Extension.swift
LaguSionMain/: LaguSionMain.h
LaguSionMainTests/: LaguSionMainTests.swift
LaguSionTests/: BUILD  BUILD.bazel  LaguSionTests.swift
LaguSionUITests/: LaguSionUITests.swift
Main/: BUILD.bazel  DismissingKeyboardOnSwipe.swift  Main.h  MainView.swift  SearchField.swift
MainTests/: ActionSheetAndAlertTest.swift  BUILD.bazel  GetSongsTest.swift  MainTests.swift  SearchFieldTest.swift  SongBookSelectionTest.swift  SortOptionSelectionTest.swift
Networking/: BUILD.bazel  LaguSionClient.swift  TestCombineGRPCView.swift
Networking/gRPC/: GRPCServiceManager.swift
Networking/gRPC/LaguSionService/: lagu_sion.grpc.swift  lagu_sion.pb.swift
Networking/gRPC/protobuf/: lagu_sion.proto
NetworkingTests/: BUILD.bazel  NetworkingTests.swift
Song/: BUILD.bazel  Info-Bazel.plist  Song.h  SongView.swift
SongTests/: BUILD.bazel  SongTests.swift
build-system/: prepare-build-variables-LaguSion.sh  prepare-build.sh
build-system/bazel-utils/: plist-fragment.bzl  plist_fragment.bzl
fastlane/: Appfile  Fastfile  Matchfile  README.md  Snapfile
fastlane/screenshots/: screenshots.html
scripts/: generate-proto.sh
