load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//build-system/bazel-utils:plist_fragment.bzl", "plist_fragment")

swift_library(
    name = "FavoritesSources",
    module_name = "Favorites",
    srcs = glob([
        "**/*.swift",
    ]),
    deps = [
        "//Song:SongSources",
    ],
    visibility = ["//visibility:public"],
)

plist_fragment(
    name = "FavoritesInfoPlist",
    extension = "plist",
    template = 
    """
    <key>CFBundleDevelopmentRegion</key>
    <string>$(DEVELOPMENT_LANGUAGE)</string>
    <key>CFBundleExecutable</key>
    <string>$(EXECUTABLE_NAME)</string>
    <key>CFBundleIdentifier</key>
    <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
    <key>CFBundleInfoDictionaryVersion</key>
    <string>6.0</string>
    <key>CFBundleName</key>
    <string>$(PRODUCT_NAME)</string>
    <key>CFBundlePackageType</key>
    <string>FMWK</string>
    <key>CFBundleShortVersionString</key>
    <string>1.0</string>
    <key>CFBundleVersion</key>
    <string>1.0</string>
    """,
)

ios_framework(
    name = "Favorites",
    bundle_id = "id.abram.ios.LaguSion.Favorites",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "13.0",
    infoplists = [":FavoritesInfoPlist"],
    frameworks = [
        "//Song",
    ],
    deps = [
        ":FavoritesSources",
    ],
    visibility = ["//visibility:public"],
)
