load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//build-system/bazel-utils:plist_fragment.bzl", "plist_fragment")
load("//build-input/data:variables.bzl", "lagu_sion_bundle_version")

swift_library(
    name = "NetworkingSources",
    module_name = "Networking",
    srcs = glob([
        "**/*.swift",
    ]),
    deps = [
        "@com_github_abrampers_grpc_swift_combine//:CombineGRPC",
    ],
    visibility = ["//visibility:public"],
)

plist_fragment(
    name = "NetworkingInfoPlist",
    extension = "plist",
    template = 
    """
    <key>CFBundleDevelopmentRegion</key>
    <string>$(DEVELOPMENT_LANGUAGE)</string>
    <key>CFBundleExecutable</key>
    <string>$(EXECUTABLE_NAME)</string>
    <key>CFBundleIdentifier</key>
    <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
    <key>CFBundleInfoDictionaryVersion</key>
    <string>6.0</string>
    <key>CFBundleName</key>
    <string>$(PRODUCT_NAME)</string>
    <key>CFBundlePackageType</key>
    <string>FMWK</string>
    <key>CFBundleShortVersionString</key>
    <string>1.0</string>
    <key>CFBundleVersion</key>
    <string>{lagu_sion_bundle_version}</string>
    """.format(
        lagu_sion_bundle_version = lagu_sion_bundle_version
    ),
)

ios_framework(
    name = "Networking",
    bundle_id = "id.abram.ios.LaguSion.Networking",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "13.0",
    infoplists = [":NetworkingInfoPlist"],
    deps = [
        ":NetworkingSources",
    ],
    visibility = ["//visibility:public"],
)
