load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "SettingsTestsSources",
    srcs = glob(["**/*.swift"]),
    deps = [
        "//LaguSion/Settings:SettingsSources",
    ],
    visibility = ["//visibility:private"],
)

ios_unit_test(
    name = "SettingsTests",
    deps = [":SettingsTestsSources"],
    test_host = "//LaguSion/LaguSion",
    minimum_os_version = "13.0",
)
