load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("//build-system/bazel-utils:plist_fragment.bzl", "plist_fragment")
load("//build-input/data:variables.bzl", "lagu_sion_bundle_version")

swift_library(
    name = "SongSources",
    module_name = "Song",
    srcs = glob([
        "**/*.swift",
    ]),
    deps = [
        "//LaguSion/Networking:NetworkingSources",
        "//LaguSion/Common:CommonSources",
    ],
    visibility = ["//visibility:public"],
)

plist_fragment(
    name = "SongInfoPlist",
    extension = "plist",
    template = 
    """
    <key>CFBundleDevelopmentRegion</key>
    <string>$(DEVELOPMENT_LANGUAGE)</string>
    <key>CFBundleExecutable</key>
    <string>$(EXECUTABLE_NAME)</string>
    <key>CFBundleIdentifier</key>
    <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
    <key>CFBundleInfoDictionaryVersion</key>
    <string>6.0</string>
    <key>CFBundleName</key>
    <string>$(PRODUCT_NAME)</string>
    <key>CFBundlePackageType</key>
    <string>FMWK</string>
    <key>CFBundleShortVersionString</key>
    <string>1.0</string>
    <key>CFBundleVersion</key>
    <string>{lagu_sion_bundle_version}</string>
    """.format(
        lagu_sion_bundle_version = lagu_sion_bundle_version
    ),
)

config_setting(
    name = "debug_build",
    values = {
        "compilation_mode": "dbg",
    },
)

config_setting(
    name = "opt_build",
    values = {
        "compilation_mode": "opt",
    },
)

config_setting(
    name = "fastbuild_build",
    values = {
        "compilation_mode": "fastbuild",
    },
)

ios_framework(
    name = "Song",
    bundle_id = "id.abram.ios.LaguSion.Song",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "13.0",
    infoplists = [":SongInfoPlist"],
    frameworks = [
        "//LaguSion/Networking",
    ],
    deps = [
        ":SongSources",
    ],
    provisioning_profile = select({
        ":debug_build": "//build-input/provision:Development_id.abram.ios.LaguSion.mobileprovision",
        ":opt_build": "//build-input/provision:AdHoc_id.abram.ios.LaguSion.mobileprovision",
        ":fastbuild_build": "//build-input/provision:Development_id.abram.ios.LaguSion.mobileprovision",
    }, no_match_error = "Please specify compilation mode."),
    visibility = ["//visibility:public"],
)
